[package]
name = "merge_ris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = { version = "1.3.0" }
serde = { version = "1.0.193", features = ["derive"] }
clap = { version = "4.4.10", features = ["derive"] }
clio = { version = "0.3.4", features = ["clap", "clap-parse"] }
anyhow = { version = "1.0.75" }